--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ Django==5.1
 django-bower==5.2.0
 isort==5.13.2
 mccabe==0.7.0
+numpy==2.1.3
+pandas==2.2.3
 pillow==10.4.0
 platformdirs==4.2.2
 psycopg2-binary==2.9.9
 pylint==3.2.6
 pylint-django==2.5.5
 pylint-plugin-utils==0.8.2
+python-dateutil==2.9.0.post0
+pytz==2024.2
 setuptools==72.1.0
 six==1.16.0
 sqlparse==0.5.1
